--- a/mascaron.html
+++ b/mascaron.html
@@ -54,7 +54,7 @@
 		viewer.setDescription(``);
 		viewer.loadSettingsFromURL();
 		
-		viewer.setDescription("");
+		viewer.setDescription("Mascarón");
 		
 		viewer.loadGUI(() => {
 			viewer.setLanguage('en');
